# OpenSuika

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.go  go.mod  go.sum
.cache/clangd/index/: main.c.E94CAFF5E85BF51D.idx
src/: imports.h  main.c  scene.h
src/blank/: blank_scene.c
src/components/disk/: savefile.h
src/components/memory/: arena.h
src/components/render/: screen.h
src/engine/: engine.h  scene.h  types.h
src/game/: game_scene.c
src/scenes/blank/: blank_scene.c
src/scenes/game/: game_scene.c
src/scenes/start/: start_scene.c
src/start/: start_scene.c  start_scene.h
